--- a/aten/src/ATen/native/native_functions.yaml
+++ b/aten/src/ATen/native/native_functions.yaml
@@ -191,6 +191,12 @@
 
 - func: _storage_size_allocated(Tensor(a!) self) -> bool
 
+- func: resize_storage_(Tensor(a!) self, int s) -> Tensor(a!)
+  dispatch:
+    CPU: resize_storage_cpu_
+    CUDA: resize_storage_cuda_
+    Meta: resize_storage_meta_
+  autogen: resize_storage, resize_storage.out
 
 - func: sym_constrain_range(Scalar size, *, int? min=None, int? max=None) -> ()
   dispatch:
